--- a/Design/test.ipynb
+++ b/Design/test.ipynb
@@ -189,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pyuic5 -x BauxOutput2.ui -o BauxOutput2.py"
+    "!pyuic5 -x Settings2.ui -o Settings2.py"
    ]
   },
   {
